fix: changing the buttons to be in column on mobile

--- a/src/components/CloseRoom/styles.module.scss
+++ b/src/components/CloseRoom/styles.module.scss
@@ -16,4 +16,13 @@
     }
   }
 
+  @media(max-width:500px){
+    flex-direction: column;
+    gap: 20px;
+
+    button{
+      width: 100%;
+    }
+  }
+
 }
